<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetalhesProdutoActivity">

  <ImageButton
      android:id="@+id/btnVoltar"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/circulo_branco"
      android:elevation="4dp"
      android:src="@drawable/ic_seta_esquerda"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="0dp"
      android:layout_height="170dp"
      android:scaleType="centerCrop"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/combo_hamburger_batata_milkshake" />

  <TextView
      android:id="@+id/textViewNomeProdutoPedido"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:text="@string/nome_combo"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <TextView
      android:id="@+id/textViewDescricaoProdutoPedido"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/descricao_combo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewNomeProdutoPedido" />

  <TextView
      android:id="@+id/textViewValorProdutoPedido"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:text="R$ 20,00"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewDescricaoProdutoPedido" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewValorProdutoPedido">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:text="@string/titulo_opcionais"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="Selecione opcionais abaixo para complementar"
        android:textSize="16sp" />
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewOpcionais"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintBottom_toTopOf="@+id/btnConfirmarPedido"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout"
      tools:itemCount="6"
      tools:listitem="@layout/opcional_item_layout" />


  <ImageView
      android:id="@+id/imageViewMenosProdutos"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/btnConfirmarPedido"
      app:layout_constraintEnd_toStartOf="@+id/textViewQtdProdutosPedidos"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/btnConfirmarPedido"
      app:srcCompat="@drawable/ic_menos" />

  <TextView
      android:id="@+id/textViewQtdProdutosPedidos"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="1"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="@+id/btnConfirmarPedido"
      app:layout_constraintEnd_toStartOf="@+id/imageViewAdicionarProduto"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/imageViewMenosProdutos"
      app:layout_constraintTop_toTopOf="@+id/btnConfirmarPedido" />

  <ImageView
      android:id="@+id/imageViewAdicionarProduto"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      app:layout_constraintBottom_toBottomOf="@+id/btnConfirmarPedido"
      app:layout_constraintEnd_toStartOf="@+id/textViewValorTotalDoPedido"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/textViewQtdProdutosPedidos"
      app:layout_constraintTop_toTopOf="@+id/btnConfirmarPedido"
      app:srcCompat="@drawable/ic_mais" />

  <TextView
      android:id="@+id/textViewValorTotalDoPedido"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="R$ 20,00"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/btnConfirmarPedido"
      app:layout_constraintEnd_toStartOf="@+id/btnConfirmarPedido"
      app:layout_constraintStart_toEndOf="@+id/imageViewAdicionarProduto"
      app:layout_constraintTop_toTopOf="@+id/btnConfirmarPedido" />

  <Button
      android:id="@+id/btnConfirmarPedido"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:backgroundTint="#F44336"
      android:text="Confirmar"
      android:textSize="20sp"
      app:cornerRadius="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>